--- a/ejercicio5/.project
+++ b/ejercicio5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ejercicio5</name>
+	<name>tarea5</name>
 	<comment></comment>
 	<projects>
 	</projects>
